--- a/src/styles/sass/components/tableOfContents.module.scss
+++ b/src/styles/sass/components/tableOfContents.module.scss
@@ -17,6 +17,10 @@
     border-radius: $border-radius-sm;
     margin-bottom: $spacing-16;
   }
+
+  @include respond-to(mobile-768) {
+    display: none;
+  }
 }
 
 .label {
