--- a/src/styles/sass/components/tableOfContents.module.scss
+++ b/src/styles/sass/components/tableOfContents.module.scss
@@ -46,6 +46,38 @@
   padding-left: $spacing-6;
   transition: all $transition-base;
 
+  // Nested heading levels with progressive indentation
+  &[data-level="2"] {
+    padding-left: calc($spacing-6 + 0px);
+  }
+
+  &[data-level="3"] {
+    padding-left: calc($spacing-6 + 12px);
+
+    .link {
+      font-size: 10px;
+    }
+  }
+
+  &[data-level="4"] {
+    padding-left: calc($spacing-6 + 24px);
+
+    .link {
+      font-size: 10px;
+      opacity: 0.8;
+    }
+  }
+
+  &[data-level="5"],
+  &[data-level="6"] {
+    padding-left: calc($spacing-6 + 36px);
+
+    .link {
+      font-size: 9px;
+      opacity: 0.7;
+    }
+  }
+
   &::before {
     content: "";
     position: absolute;
